Fixes #327, Fix clear spacing (#328)

--- a/pages/auctions/s.module.scss
+++ b/pages/auctions/s.module.scss
@@ -52,7 +52,7 @@
   cursor: pointer;
   font-size: 14px;
   font-weight: 500;
-  margin: 0 auto;
+  margin: 0 auto 0 0;
   padding: 0;
   text-decoration: underline;
 
